syntax = "proto3";

option csharp_namespace = "TaskStream.Shared.Protos.Auth";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Refresh (RefreshRequest) returns (AuthResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message LogoutRequest {
}

message AuthResponse {
  bool succeeded = 1;
  string access_token = 2;
  string refresh_token = 3;
  repeated string errors = 4;
}

message LogoutResponse {
    bool succeeded = 1;
}